# TextEditor

./: .gitignore  CMakeLists.txt  PieceTable.cpp  PieceTable.h  PieceTable1.cpp  README.md  a  helper.cpp  main.cpp  new.cpp  new1.cpp  test.cpp
gui/: main.cpp  mainwindow.cpp  mainwindow.h
src/: helper.cpp
tests/: test.cpp
